# ctq

./: .gitmodules  CMakeLists.txt  README.md
include/: ctq_reader.h  ctq_reader.hh  ctq_util.hh  ctq_writer.h  ctq_writer.hh
src/: cli.cc  reader.cc  writer.cc
test/: CMakeLists.txt  ctq.cc
test/dataset/: simple.tei
